# md-trend-agent

./: .gitignore  Brand.md  CLAUDE.md  POC_SPEC.md  README.md  SPEC.md  SPEC_V2.md  SPEC_V3.md  index.html  privacy.html  pyproject.toml  requirements.txt  trend-intelligence-source-reference.md
datalayer/: __init__.py  aggregate.py  extract.py  fields.py  ladder.py  metrics.py  records.py  review_queue.py  smoke.py
datalayer/sources/: base.py  breuninger.py  kolonmall.py  quince.py  shopify.py
docs/agent-logs/: m3-synthesis-2026-07-23-handoff.md  m4-storage-2026-07-23-handoff.md
docs/superpowers/plans/: 2026-07-20-mvp-source-extraction.md  2026-07-20-poc-crawl-trend.md  2026-07-23-m1-corpus-spine.md  2026-07-23-m2-measurement-merge.md  2026-07-23-m3-synthesis.md
ops/: cron.md
ops/hooks/: worktree_memory_guard.sh
poc/: analyze.py  bundle.py  collect.py  config.py  corpus.py  measure.py  naver.py  pinterest.py  report.py  report_html.py  rss.py  run.py  smoke.py  steady.py  storage.py  synthesize.py  weekly.py
tests/: conftest.py
tests/datalayer/: fixtures.py  test_aggregate.py  test_breuninger.py  test_extract.py  test_extract_wiring.py  test_fields.py  test_kolonmall.py  test_ladder.py  test_metrics.py  test_quince.py  test_records.py  test_review_queue.py  test_shopify.py  test_shopify_retry.py
tests/poc/: fixtures.py  test_bundle.py  test_corpus.py  test_measure.py  test_naver_concepts.py  test_pinterest.py  test_report.py  test_report_html.py  test_report_pinterest.py  test_rss.py  test_storage.py  test_synthesize.py  test_weekly.py
(+9 files in other folders)
