[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bzrr"
version = "0.1.0"
description = "BZRR data collection and analysis pipeline"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["datalayer*", "poc*"]
