[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-trend-agent"
version = "0.1.0"
description = "md-trend-agent: knitwear MD trend data collection and analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "scrapling[fetchers]>=0.4.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["datalayer*", "poc*"]
